Dark Mode Fix and adding Transcript

--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -4,21 +4,23 @@
 }
 
 .dark-mode a {
-    color: #000000;
+    color: #ffffff;
 }
 
-.dark-mode .navbar {
-    background-color: #3b658d;
+.dark-mode nav {
+    background-color: #3c2c1a!important;
 }
 
 .dark-mode .footer {
     background-color: #1a252f;
 }
+.dark-mode .heading{
+    color: #ffffff;
+}
 
 .dark-mode .video {
     background-color: #1a252f;
 }
-
 
 .dark-mode .table {
     background-color: #2c3e50;
@@ -26,11 +28,20 @@
 }
 
 .dark-mode .table th,
-.dark-mode .table td 
-{
+.dark-mode .table td {
     border-color: #ffffff;
 }
-.dark-mode .table strong{
+
+.dark-mode .table strong {
+    color: #ffffff;
+}
+.dark-mode .header{
     color: #ffffff;
 }
 
+.dark-mode .bg,
+.dark-mode .container,
+.dark-mode .content,
+.dark-mode body {
+    background-color: #000000;
+}
